- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- Add `main` function to handle command line arguments.
- Add some VarAction2 variables for houses.
- Add `TTDString` and `TTDIndustry` constants.
- Add `TownGrowthEffect` constants.
- Add `Eval` as a version of `Switch` without ranges.
- Add `subroutines` argument to `Switch` and allow `name()` call syntax.
- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of bridge layouts.
- Support encoding of industry layouts.
- Support encoding of tile acceptance lists for houses and industry tiles.
- Support expressions for register value in PERM and TEMP access.
- Support parameter expressions for vars60+ in `Switch` code (via var7b).
- Support cropping 24bpp sprites.
- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).
- Add `Sprite.save_gif` method to generate palette animated images.
- Add init_id_map command line command to initialize id_map.json.
- Add `Date` type to represent dates that don't fit into `datetime.date`.
- Start auto-assiged IDs from 0 for INDUSTRY_TILE feature.
- Remove `Mask` offset, add `FileMask` absolute positioning.
- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
- Rename some of the Action0 properties for `CARGO` to match nml.
- Don't write redundant actions for railtypes without fallbacks in railtype table.
- Return cargo type ids in `NewGRF.set_cargo_table`.

- lib: Fix `CallbackManager.make_switches` for non-vehicle features.
- lib: Fix incorrect 2cc colors for auto-articulated parts.
- lib: Fix unicode vehicle names.
- lib: Set correct flags and track_type on auto-articulated parts.
- lib: Add high-level `Industry` class.
- lib: `CallbackManager` rewrite: